--- a/public/eshopper/css/main.css
+++ b/public/eshopper/css/main.css
@@ -114,25 +114,25 @@ a#scrollUp i {
     -o-transition: all 0.9s ease 0s;
 }
 
-.fa-facebook:hover {
-    background: #0083C9;
-}
+/*.fa-facebook:hover {*/
+/*    background: #0083C9;*/
+/*}*/
 
-.fa-twitter:hover {
-    background: #5BBCEC;
-}
+/*.fa-twitter:hover {*/
+/*    background: #5BBCEC;*/
+/*}*/
 
-.fa-linkedin:hover {
-    background: #FF4518;
-}
+/*.fa-linkedin:hover {*/
+/*    background: #FF4518;*/
+/*}*/
 
-.fa-dribbble:hover {
-    background: #90C9DC;
-}
+/*.fa-dribbble:hover {*/
+/*    background: #90C9DC;*/
+/*}*/
 
-.fa-google-plus:hover {
-    background: #CE3C2D;
-}
+/*.fa-google-plus:hover {*/
+/*    background: #CE3C2D;*/
+/*}*/
 
 .header-middle .container .row {
     border-bottom: 1px solid #f5f5f5;
